# Trabalhos-Diversos

./: .gitignore  README.md  determinantes.c  multMatrizesICC.c
ATP/ATPII-TPP04/: TPP-04.c
ATP/Codeblobs--Editor-de-Notas-no-Terminal-master/: Codeblobs  README.md  editor.c  editor.h  main.c
ATP/Matrizes/: determinantes.c  multMatrizesICC.c
ATP/TEXT RPG ADVENTURE/: CMakeLists.txt  README.md  delay.h  dungeon_tutorial.c  fightSystem.c  game.c  game_functions.h  inventory.c  main.c  mobs.c  mobsSkill.c  player.c  puzzle_stack.c  skill.c
ATP/TEXT RPG ADVENTURE/Projeto em CodeBlocks/TEXT RPG ADVENTURE/: TEXT RPG ADVENTURE.cbp  TEXT RPG ADVENTURE.depend  TEXT RPG ADVENTURE.layout
ATP/TEXT RPG ADVENTURE/Projeto feito em Dev-C/: Makefile.win  TRPG.dev  TRPG.layout  aa.trpg  aaaa.trpg  aaaaaaaaaaaaaaaa.trpg  aaaaas.trpg
ATP/TEXT RPG ADVENTURE/headers/: dungeon_tutorial.h  fightSystem.h  game.h  inventory.h  lore.h  mobs.h  mobsSkill.h  mobs_name.h  player.h  puzzle_stack.h  skill.h
CG/bresenham_linha_circ/: Algoritmo de Bresenham.txt  Bresenham_desenhar.py
COMPILADORES/: COMPILER.md
ED-2/TP_ED-2/: CMakeLists.txt  README.md  algoritmos_de_busca.c  grafos.c  main.c  mini_controller.c
ED-2/TP_ED-2/Projeto em CodeBlocks/: BFS-grafo_criado.txt  DFS-grafo_criado.txt  Projeto em CodeBlocks.cbp  Projeto em CodeBlocks.depend  Projeto em CodeBlocks.layout  digrafo_criado.txt  (+1 more)
IA/Trabalho IA - Bruno dos Santos e Giulia Campos/: build.xml
PAA/Trabalho de PAA/: Integrantes do Grupo.txt  Relatório.docx  Tabela Comparativa.xlsx
public/docs/: COMPUTEIROS.MD  ISSUES.MD
(+172 files in other folders)
